--- a/game.html
+++ b/game.html
@@ -6,8 +6,8 @@
 
     <!-- #region META -->
     <meta name="author" content="Parzival parzival@parzival-dev.eu">
-    <meta name="description" content="Wanna play Pong?" />
-    <meta name="keywords" content="pong">
+    <meta name="description" content="Wanna play breakout?" />
+    <meta name="keywords" content="Breakout">
     <!-- #endregion -->
 
     <!-- #region FAVICON -->
